Water tab: Listen for when the user changes tabs so the JMolDialog can be hidden when switching away and shown when switching to this tab (if it was already shown)
Water tab: Fixed: When clicking into the play area, 3d sucrose shouldn't disappear
Micro tab: Improved the combo box for solute selection
# 0.00.58 (53588) Jun 29, 2011
Switched to use combo box example as main for temporary testing
All tabs: Added model.txt
All tabs: Internationalized reset all button
All tabs: Improved colors against white background
All tabs: Added option for white background
# 0.00.57 (53534) Jun 27, 2011
Water tab: Made the mini beaker graphic half as big, reduced thickness of its walls and removed liter ticks and labels
Water tab: Close the 3D sugar view if the user clicks anywhere else
Macro tab: Moved the short circuit message in front of salt/sugar dispensers
Macro tab: For the short circuit message, use bold yellow text with no box
Water tab: added bond information for sucrose in 3D
Macro tab: Changed "Short circuited" to read "Short circuit! and internationalized
Water tab: JMol window remembers its location if you close and open it (without resetting)
Water tab: Fixed: JMol window should close if you reset
Water tab: Fixed: If you reset when the salt and/or sugar are in the water, you do not get them back in the bucket.
Water tab: Fixed: sucrose formula jitters
Micro tab: Added "Sodium Chloride" and "Sucrose" on the side of the shakers
Internationalized the text in the sim
Macro tab: Added a text label that shows "Sugar" or "Salt" along the axis of the dispenser
# 0.00.56 (53346) Jun 21, 2011
Micro tab: Added back sugar
Micro tab: Improved model coordinate frames
# 0.00.55 (53289) Jun 20, 2011
Micro tab: Moved solute selection box closer to the shaker like in the macro tab
Water tab: Removed the "remove salt" and "remove sugar" buttons, users will use reset instead
Macro tab: Made the light bulb brightness work better against the dark background